# learn-rust

./: README.md  README.org
advent_of_code/2020/day1/src/: main.rs
advent_of_code/2021/day1/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
minigrep/src/: lib.rs  main.rs
rest-injector/: Cargo.toml
rest-injector/src/: lib.rs  main.rs  mod.rs
rest-injector/src/generator/: data_generator.rs  mod.rs
webserver/: Cargo.toml  hello.html
webserver/src/: main.rs
